--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler:
     - gcc
 before_install:
     - sudo apt-get update -q
+    - sudo apt-get -y install freeglut3 freeglut3-dev
     - sudo apt-get -y install libcunit1 libcunit1-dev
 script:
     - make && make tests
